# zzone-project

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  config.json  poetry-lock-hash.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: main.yml
debug/: debug_download_zipcode_html.py  debug_zip_code_database_csv.py  test.html  test_requests_html.py  test_selenium.py
docs/: Makefile  make.bat
docs/source/: conf.py
docs/source/01-What-is-this/: index.rst
docs/source/02-Crawler-Strategy/: index.rst
scripts/: step1_put_zipcode_list_into_dynamodb.py
tests/: all.py  test_api.py
zzone/: __init__.py  boto_ses.py  config_def.py  config_load.py  crawler.py  dynamodb.py  exc.py  paths.py
zzone/crawlers/: crawl_zipcode_detail_html.py
zzone/data_wrangling/: api.py  initialize_dynamodb.py  zip_code_database_csv.py
