# this is just for integration test purpose, it is not used for publishing to PyPI, we use setup.py
# for some manual test, you need to make a copy of this and rename it to ``pyproject.toml``
[tool.poetry]
name = "zzone"
version = "0.1.1"
description = ""
authors = ["Angora King <angoraking@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0" # this is just for integration test purpose, it doesn't mean that we only support 3.8+
# official AWS Python SDK
botocore = "1.34.112"
boto3 = "1.34.112"
# advanced boto3 session manager
boto_session_manager = "1.7.2"
# path manipulation
pathlib_mate = "1.3.2"
# smart IO, dependency of s3pathlib
smart-open = "6.2.0"
# AWS s3 SDK manipulation
s3pathlib = "2.1.2"
# HTTP requests
requests = "2.32.2"
urllib3 = "1.26.18"
fake_useragent = "1.5.1"
selenium = "4.21.0"
# DynamoDB
pynamodb = "6.0.0"
pynamodb_mate = "6.0.0.1"
# Data Frame Management
polars = "0.20.29"

# --- addtitional dependencies for development
[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pathlib_mate = "*"
twine = "*"
wheel = "*"
build = "*"


# --- addtitional dependencies for building documentations
[tool.poetry.group.doc]
optional = true


[tool.poetry.group.doc.dependencies]
Sphinx = "5.3.0"
sphinx-jinja = "2.0.2"
sphinx-copybutton = "0.5.1"
sphinx-design = "0.5.0"
furo = "2023.03.27"
nbsphinx = "0.8.12"
rstobj = "1.2.1"
pygments = "2.15.1"
ipython = "8.10.0"
docfly = "2.0.3"


# --- addtitional dependencies for testing
[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest-cov = "*"
pytest = "*"
twine = "*"
wheel = "*"
build = "*"


# --- addtitional dependencies for automation shell scripts
[tool.poetry.group.auto]
optional = true

[tool.poetry.group.auto.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
